Resize logo properly

--- a/.themes/nshint/source/_includes/custom/header.html
+++ b/.themes/nshint/source/_includes/custom/header.html
@@ -1,4 +1,4 @@
 {% if site.title %}
 	<!-- <div class="header-title"><a href="{{ root_url }}/">{{ site.title }}</a></div> -->
-	<a href="{{ root_url }}/"><img src="{{ root_url }}/images/nshint_logo.png" height="120px" /></a>
+	<a href="{{ root_url }}/"><img src="{{ root_url }}/images/nshint_logo.png" /></a>
 {% endif %}
