--- a/.themes/nshint/sass/custom/_styles.scss
+++ b/.themes/nshint/sass/custom/_styles.scss
@@ -28,6 +28,13 @@ body {
 		background: #FFFFFF;
 	}
 
+	.social {
+		padding-top: 30px;
+		img {
+			padding-right: 20px;
+		}
+	}
+
 	> header {
 		background: #ffffff;
 		padding-top: 3em;
@@ -200,8 +207,6 @@ article {
 
 	.blog-index {
 		article {
-			padding-top: 4em;
-
 			header {
 				padding-top: 2em;
 				padding-left: 0;
