--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,9 +1,10 @@
 {% if site.title %}
-	<a href="{{ root_url }}/"><img src="{{ root_url }}/images/nshint_logo.png" /></a>
+	<a href="{{ root_url }}/"><img src="{{ root_url }}/svg/nshint_logo.svg" height="120px"></a>
 	<br/>
 	<div class="social">
-		<a href="{{ site.social.twitter }}"><img src="{{ root_url }}/images/twitter.png" /></a>
-		<a href="{{ site.social.github }}"><img src="{{ root_url }}/images/github.png" /></a>
-		<a href="{{ site.social.rss }}"><img src="{{ root_url }}/images/rss.png" /></a>
+		<a href="{{ site.social.twitter }}"><img src="{{ root_url }}/svg/twitter.svg" height="40px"/></a>
+		<a href="{{ site.social.github }}"><img src="{{ root_url }}/svg/github.svg" height="40px"/></a>
+		<a href="{{ site.social.rss }}"><img src="{{ root_url }}/svg/rss.svg" height="40px"/></a>
 	</div>
 {% endif %}
+
