Use fira to show code snippets

--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -8,3 +8,5 @@
 //$heading-font-family: "Verdana", sans-serif;
 //$header-title-font-family: "Futura", sans-serif;
 //$header-subtitle-font-family: "Futura", sans-serif;
+
+@import url(https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.206/distr/fira_code.css);
